# Dev/toolchain deps (single source of truth). Edit a pin, then `uv lock` + commit uv.lock.
[project]
name = "anyscale-templates-tooling"
version = "0"
requires-python = "==3.12.*"
dependencies = [
    "pre-commit==3.8.0",
    "nbconvert==7.17.1",
    "anyscale==0.26.99",
    "pyyaml==6.0.3",
    "pydantic==2.13.3",
]

[dependency-groups]
# ray-base-locks only; `uv sync --only-group ray-bump`.
ray-bump = ["ruamel.yaml==0.18.6"]

[tool.uv]
package = false
