[project]
name = "vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "accelerate<2",
    "cmake<4.2",
    "datasets<4.2",
    "deepdiff<9",
    "diffusers<0.36",
    "draccus==0.10.0",
    "einops<0.9",
    "boto3>=1.35",
    "h5py>=3.15.1",
    "huggingface-hub[cli,hf-transfer]==0.35.3",
    "imageio[ffmpeg]<3",
    "ipywidgets>=8.1.8",
    "jsonlines<5",
    "jupyter>=1.1.1",
    "lerobot==0.4.3",
    "opencv-python-headless==4.11.0.86",
    "pandas>=2.2,<3",
    "pyserial<4",
    "ray[data,train]==2.54.1",
    "sentencepiece",
    "transformers",
    "smart-open>=7.5.0",
    "torch>=2.7.1,<2.8",
    "torchcodec<0.6",
    "torchvision<0.23",
    "tqdm>=4.67.3",
    "wandb<0.25",
    "s3fs>=2025.9.0",
    "av>=15.1.0",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "anyscale"
url = "http://localhost:9478/simple"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", branch = "fix/lerobot_openpi" }
ray = { index = "anyscale" }

[tool.uv.workspace]
members = []
